--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,16 @@
-<h1>WELCOME</h1>
+</!DOCTYPE HTML>
+<html>
+<head>
+  <title>SAAS APP</title>
+  
+  <body>
+    
+    <header></header>
+    
+    <div>
+      <h1>WELCOME</h1>
+    </div>
+  
+  </body>
+</head>
+</html>
