Added About View,Route, Controller action.

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,16 +1,15 @@
-</!DOCTYPE HTML>
+</!DOCTYPE html>
 <html>
 <head>
   <title>SAAS APP</title>
-  
+
+</head>  
   <body>
     
-    <header></header>
     
-    <div>
-      <h1>WELCOME</h1>
-    </div>
+      <h1>Welcome from our home page.</h1>
+
   
   </body>
-</head>
+
 </html>
