Modified Home-Header, Page Layout

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -6,9 +6,10 @@
 </head>  
   <body>
     
-    
-      <h1>Welcome from our home page.</h1>
-
+    <div class="home_header text-center container-fluid">
+      <h1>Welcome to DevMatch</h1>
+      <h3>A membership site where entrepreneurs can meet developers.</h3>
+    </div>
   
   </body>
 
