--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -18,7 +18,7 @@
 @import 'bootstrap';
 
 
-body, .navbar {
+.navbar, .home_header {
   //Gradient provided by @_ighosh at uiGradients.com
   background: #4CA1AF; /* fallback for old browsers */
   background: -webkit-linear-gradient(to left, #4CA1AF , #C4E0E5); /* Chrome 10-25, Safari 5.1-6 */
@@ -28,4 +28,12 @@ body, .navbar {
 h1, h2, h3 {
   font-family: 'Oswald', sans-serif;
 }
+
+.home_header {
+  color:white;
+  margin-top:-20px;
+  padding-top:50px;
+  padding-bottom:100px;
+}
+
 
