--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -17,7 +17,7 @@
 @import 'bootstrap-sprockets';
 @import 'bootstrap';
 
-
+/* Background Gradient */
 .navbar, .home_header {
   //Gradient provided by @_ighosh at uiGradients.com
   background: #4CA1AF; /* fallback for old browsers */
@@ -25,10 +25,12 @@
   background: linear-gradient(to left, #4CA1AF , #C4E0E5); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 
+/* Typography Styles */
 h1, h2, h3 {
   font-family: 'Oswald', sans-serif;
 }
 
+// homepage styles
 .home_header {
   color: white;
   margin-top: -20px;
@@ -36,21 +38,10 @@ h1, h2, h3 {
   padding-bottom: 100px;
 }
 
-.navbar-default .navbar-brand {
-  color: white;
-}
-
-.navbar-default .navbar-brand:hover {
-  color: white;
-  opacity: 0.75;
-}
-
-
-.navbar-default .navbar-nav > li > a {
-  color: white;
-}
-
-.navbar-default .navbar-nav > li > a:hover {
-  color: white;
-  opacity: 0.75;
+// Navbar styles
+.navbar-default .navbar-brand, .navbar-default .navbar-nav > li > a {
+  color: white; &:hover {
+    color: white;
+    opacity: 0.75;
+  }
 }
