--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -14,8 +14,14 @@
  *= require_self
  */
 
+// Bootstrap
 @import 'bootstrap-sprockets';
 @import 'bootstrap';
+
+
+// Font Awesome
+@import "font-awesome-sprockets";
+@import "font-awesome";
 
 /* Background Gradient */
 .navbar, .home_header {
