Updated about page and logo styles

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,1 +1,5 @@
+<div class="container text-center">
 <h1>About Page</h1>
+<p>We are DevMatch. Our company focuses on creating an exclusive community
+    for Developers and Entreprenuers to meet.</p>
+</div>
