--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -56,3 +56,16 @@ h1, h2, h3 {
   font-family: 'Oswald', sans-serif;
   font-size: 24px;
 }
+
+.navbar-default .navbar-toggle .icon-bar {
+  background-color: white;
+}
+
+.navbar-default .navbar-toggle {
+  border: 2px solid white;
+    &:hover, &:focus {
+      background-color: #4CA1AF;
+    }
+}
+
+
