--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,6 +31,7 @@
           <ul class="nav navbar-nav navbar-right">
             <li><a href="/">Home</a></li>
             <li><%= link_to "About", about_path %></li>
+            <li><%= link_to "Contact", new_contact_path %></li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div>
