--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -4,8 +4,12 @@
       <h3 class="text-center">Contact Us</h3>    
     
       <div class="col-md-4 col-md-offset-4">
+      
+        <%= flash[:notice] %>
+      
+      
         <div class="well">
-        <%= form_for "/contacts" do |f| %>
+        <%= form_for @contact do |f| %>
         
           <div class="form-group">
             <%= f.label :name %>
@@ -25,6 +29,7 @@
           <div class="form-group">
             <%= f.submit 'Submit', class: 'btn btn-default' %>
           </div>
+          
         <% end %>
         </div>
       </div>
