--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -5,8 +5,9 @@
     
       <div class="col-md-4 col-md-offset-4">
       
+        <h4 class="text-center">
         <%= flash[:notice] %>
-      
+        </h4>
       
         <div class="well">
         <%= form_for @contact do |f| %>
@@ -22,8 +23,8 @@
           </div>
           
           <div class="form-group">
-          <%= f.label :comments %>
-          <%= f.text_area :comments, class: 'form-control' %>
+            <%= f.label :comments %>
+            <%= f.text_area :comments, class: 'form-control' %>
           </div>
           
           <div class="form-group">
