--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,6 +32,14 @@
             <li><a href="/">Home</a></li>
             <li><%= link_to "About", about_path %></li>
             <li><%= link_to "Contact", new_contact_path %></li>
+            <li><% if user_signed_in? %>
+              Logged in as <strong><%= current_user.email %></strong>.
+              <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> |
+              <%= link_to 'Logout', destroy_user_session_path, method: :delete, :class => 'navbar-link' %>
+            <% else %>
+              <li><%= link_to "Sign up", new_user_registration_path %></li> 
+              <li><%= link_to "Login", new_user_session_path %></li>
+            <% end %></li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div>
@@ -42,9 +50,7 @@
           <%= content_tag :div, msg, class: "alert alert-#{alert_type}" %>
         <% end %>
     </div>
-    
 
-  
     <%= yield %>
   
     
