Styling to contact mailer and devise pages

--- a/app/views/contact_mailer/contact_email.html.erb
+++ b/app/views/contact_mailer/contact_email.html.erb
@@ -4,8 +4,9 @@
     
     <body>
         
-        <p>You have a new message from 
-        <%= "#{ @name }, #{ @email }." %></p>
+        <h6>You have a new message from </h5>
+        <p><%= "#{ @name }"%></p>
+        <p>/p><%= " #{ @email }" %></p>
         
         <p> <%= @body %></p>
     </body>
