Updated Contact Mailer

--- a/app/views/contact_mailer/contact_email.html.erb
+++ b/app/views/contact_mailer/contact_email.html.erb
@@ -6,7 +6,7 @@
         
         <h6>You have a new message from </h5>
         <p><%= "#{ @name }"%></p>
-        <p>/p><%= " #{ @email }" %></p>
+        <p><%= " #{ @email }" %></p>
         
         <p> <%= @body %></p>
     </body>
