--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,18 +28,14 @@
           
         </div>
         <div class="collapse navbar-collapse" id="main-nav-collapse">
+          <div class="nav navbar-nav navbar-right">
+            <%= link_to "Sign up", new_user_registration_path, class: "btn btn-default navbar-btn" %>
+            <%= link_to "Login", new_user_session_path, class: "btn btn-default navbar-btn" %>
+          </div>
           <ul class="nav navbar-nav navbar-right">
             <li><a href="/">Home</a></li>
             <li><%= link_to "About", about_path %></li>
             <li><%= link_to "Contact", new_contact_path %></li>
-            <% if user_signed_in? %>
-              Logged in as <strong><%= current_user.email %></strong>.
-              <li><%= link_to 'Edit profile', edit_user_registration_path %></li>
-              <li><%= link_to 'Logout', destroy_user_session_path, method: :delete %></li>
-            <% else %>
-              <li><%= link_to "Sign up", new_user_registration_path %></li> 
-              <li><%= link_to "Login", new_user_session_path %></li>
-            <% end %>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div>
