--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,7 +30,7 @@
         <div class="collapse navbar-collapse" id="main-nav-collapse">
           <div class="nav navbar-nav navbar-right">
             <% if user_signed_in? %>
-              <%= link_to "Log Out", destroy_user_session_path, method: :delete, class: "btn btn-default nabvar-btn" %>
+              <%= link_to "Log Out", destroy_user_session_path, method: :delete, class: "btn btn-default navbar-btn" %>
             <% else %>
               <%= link_to "Sign up", new_user_registration_path, class: "btn btn-default navbar-btn" %>
               <%= link_to "Login", new_user_session_path, class: "btn btn-default navbar-btn" %>
