--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -44,6 +44,9 @@ h1, h2, h3 {
   padding-bottom: 100px;
 }
 
+.home-signup-links {
+  margin-top: 30px;
+}
 // Navbar styles
 .navbar-default .navbar-brand, .navbar-default .navbar-nav > li > a {
   color: white; &:hover {
