--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,9 +1,16 @@
 <div class="container">
   <div class="col-md-4 col-md-offset-4">
-  
+    <div class="well">
+      
+      <% if params[:plan] == '2' %>
+        <h2 class="text-center">Pro Account</h2>
+      <% else %>
+        <h2 class="text-center">Basic Account</h2>
+      <% end %>
+      
     <h2 class="text-center">Sign up</h2>
   
-    <div class="well">
+    
       <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
         <%= devise_error_messages! %>
       
